[package]
name = "zmqtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
protobuf = "3.4.0"
zmq = "0.10.0"


[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = "2.28.0"
